# clusterftpd

./: AUTHORS  Makefile  Makefile.in  NEWS  README  README.md  SlaveServices.thrift  bootstrap.sh  cleanup.sh  config.status  configure  configure.ac  metaserver-sample.cfg  sample.cfg  slaveserver-sample.cfg
autom4te.cache/: output.0  traces.0  traces.1
src/: CFtpServerConfig.h  Makefile  Makefile.am  Makefile.in  clusterftpd.cpp  metaserver_config.hpp  metaserver_log.hpp  metaserver_main.cpp  metaserver_main.h  redis_classes.hpp  redis_util.hpp  slave_services.thrift  slaveserver_config.hpp  slaveserver_main.cpp  slaveserver_main.h
src/CFtpServer/: CFtpServer.cpp  CFtpServer.h
src/gen-cpp/: SlaveServices.cpp  SlaveServices.h  SlaveServices_server.skeleton.cpp  slave_services.cpp  slave_services.h  slave_services_constants.cpp  slave_services_constants.h  slave_services_server.skeleton.cpp  slave_services_types.cpp  slave_services_types.h
src/metaserver-cpp/: metaserver_config.hpp  metaserver_log.hpp  metaserver_main.cpp  metaserver_main.h
src/slaveserver-cpp/: SlaveServicesHandler.hpp  slave_servicesHandler.hpp  slaveserver_config.hpp  slaveserver_log.hpp  slaveserver_main.cpp  slaveserver_main.h
