bin_PROGRAMS=metaserver slaveserver 
metaserver_SOURCES=metaserver-cpp/metaserver_main.cpp CFtpServer/CFtpServer.cpp gen-cpp/slave_services.cpp gen-cpp/slave_services_types.cpp gen-cpp/slave_services_constants.cpp 
slaveserver_SOURCES=slaveserver-cpp/slaveserver_main.cpp  gen-cpp/slave_services.cpp gen-cpp/slave_services_types.cpp gen-cpp/slave_services_constants.cpp 